--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@sweetalert2/themes": "^5.0.8",
+    "axios": "^0.25.0",
     "core-js": "^3.6.5",
+    "js-cookie": "^3.0.1",
+    "sweetalert2": "^11.3.10",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
